syntax = "proto3";

package protomsg;

// Log configuration for the container
message LogConfiguration {

    // The type of the driver - JSON_FILE,NONE
    string type = 1;
    
    // Max number of files before rotating the log files
    int64 max_files = 2;
    
    // Max size of the logs in the form of 1.2M, 5k, etc.
    string max_size = 3;
    
    // Specify a root directory for the container's log files to be stored
    string root_dir = 4;
    
    // The logging mode - BLOCKING, NON_BLOCKING
    string mode = 5;
    
    // The size of the buffer used in the form of 1.2M, 5k, etc. - applicable for non-blocking mode
    string max_buffer_size = 6;
    
}
