syntax = "proto3";

package protomsg;

// State represents a container's state
message State {

  	// Represents the status of this container - RUNNING, STOPPED, PAUSED, EXITED, DEAD
  	string status = 1;
  	
  	// Represents the PID of the container's main process
  	int64 pid = 2;
  	
  	// Represents an error that caused the container to exit if this is the reason for exiting
  	string error = 3;
  	
  	// Represents the exit code of the main container's process
  	int64 exit_code = 4;
  	
  	// Represents the time the container has last started
  	string started_at = 5;
  	
  	// Represents the time the container last exited
  	string finished_at = 6;
  	
}
